modify demo as mobile demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,54 +10,48 @@
 <body>
 	<div id="iSlider-content">
 
-		<!-- Wrapper -->
-		<div id="iSlider-outer" class="iSlider-outer-pc">
-			<div id="iSlider-hidden">
-				<div id="iSlider-option" class="iSlider-option-pc">
+		<div id="iSlider-hidden">
+			<div id="iSlider-option" class="iSlider-option">
 				<ul>
 					<li>isLooping: false</li>
 					<li>isVertical: false</li>
 					<li>isAutoplay: false</span>
 					<li>isOverspread: false</span>
-					<li>changeOrientation: 90</li>
-				<li>
-					animationType:
-					<select>
-						<option value="default">default</option>
-						<option value="rotate">rotate</option>
-						<option value="depth">depth</option>
-						<option value="flow">flow</option>
-						<option value="flip">flip</option>
-						<option value="card">card</option>
-					</select>
-				</li>
-				<li>
-					Type: 
-					<select>
-						<option value="pic">Picture</option>
-						<option value="dom">Dom</option>
-					</select>
-				</li>
+					<li>
+						animationType:
+						<select>
+							<option value="default">default</option>
+							<option value="rotate">rotate</option>
+							<option value="depth">depth</option>
+							<option value="flow">flow</option>
+							<option value="flip">flip</option>
+							<option value="card">card</option>
+						</select>
+					</li>
+					<li>
+						Type: 
+						<select>
+							<option value="pic">Picture</option>
+							<option value="dom">Dom</option>
+						</select>
+					</li>
 				</ul>
 			</div>
-				<div id="iSlider-canvas" class="iSlider-canvas-pc">
-					<div id="iSlider-nav" class="iSlider-nav-pc">
-						<div id="option-menu" class="icon-menu"></div>
-						<a>Index: 0</a>
-					</div>
-					<div id="iSlider-dom-nav">
-						<a>Home</a>
-						<a>Mail</a>
-						<a>News</a>
-						<a>TV</a>
-						<a>Game</a>
-					</div>
-					<div id="iSlider-show" class="iSlider-show-pc"> 
-					</div>
+
+			<div id="iSlider-show" class="iSlider-show"> 
+				<div id="iSlider-nav">
+					<div id="option-menu" class="icon-menu"></div>
+				</div>
+				<div id="iSlider-dom-nav">
+					<a>Home</a>
+					<a>Mail</a>
+					<a>News</a>
+					<a>TV</a>
+					<a>Game</a>
 				</div>
 			</div>
-		</div>
 
+		</div>
 	</div>
 	
 
