--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p>若是PC，请打开webkit浏览器进行测试</p>
 
 <div style="position:relative;text-align:center">
-    <h4>二维码</h4>
+    <h4>移动端展示</h4>
     <img width="150px" height="150px" src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png">
 </div>
 
