--- a/index_en.html
+++ b/index_en.html
@@ -53,7 +53,7 @@
 <p>If you use PC，please open a webkit broswer and choose mobile mode to test</p>
 
 <div style="position:relative;text-align:center">
-    <h4>QR Code</h4>
+    <h4>Mobile Demo</h4>
     <img width="150px" height="150px" src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png">
 </div>
 
