--- a/demo/index.html
+++ b/demo/index.html
@@ -9,48 +9,46 @@
 </head>
 <body>
 	<div id="iSlider-content">
+		<div id="iSlider-option" class="iSlider-option">
+			<ul>
+				<li>isLooping: false</li>
+				<li>isVertical: false</li>
+				<li>isAutoplay: false</span>
+				<li>isOverspread: false</span>
+				<li>
+					animationType:
+					<select>
+						<option value="default">default</option>
+						<option value="rotate">rotate</option>
+						<option value="depth">depth</option>
+						<option value="flow">flow</option>
+						<option value="flip">flip</option>
+						<option value="card">card</option>
+					</select>
+				</li>
+				<li>
+					Type: 
+					<select>
+						<option value="pic">Picture</option>
+						<option value="dom">Dom</option>
+					</select>
+				</li>
+			</ul>
+		</div>
 
-		<div id="iSlider-hidden">
-			<div id="iSlider-option" class="iSlider-option">
-				<ul>
-					<li>isLooping: false</li>
-					<li>isVertical: false</li>
-					<li>isAutoplay: false</span>
-					<li>isOverspread: false</span>
-					<li>
-						animationType:
-						<select>
-							<option value="default">default</option>
-							<option value="rotate">rotate</option>
-							<option value="depth">depth</option>
-							<option value="flow">flow</option>
-							<option value="flip">flip</option>
-							<option value="card">card</option>
-						</select>
-					</li>
-					<li>
-						Type: 
-						<select>
-							<option value="pic">Picture</option>
-							<option value="dom">Dom</option>
-						</select>
-					</li>
-				</ul>
+		<div id="iSlider-wrapper">
+			<div id="iSlider-show" class="iSlider-show"></div>
+			<div id="iSlider-dom-nav">
+				<a>Home</a>
+				<a>Mail</a>
+				<a>News</a>
+				<a>TV</a>
+				<a>Game</a>
 			</div>
+		</div>
 
-			<div id="iSlider-show" class="iSlider-show"> 
-				<div id="iSlider-nav">
-					<div id="option-menu" class="icon-menu"></div>
-				</div>
-				<div id="iSlider-dom-nav">
-					<a>Home</a>
-					<a>Mail</a>
-					<a>News</a>
-					<a>TV</a>
-					<a>Game</a>
-				</div>
-			</div>
-
+		<div id="iSlider-nav">
+			<div id="option-menu" class="icon-menu"></div>
 		</div>
 	</div>
 	
