--- a/demo/dom/slide_with_dots.html
+++ b/demo/dom/slide_with_dots.html
@@ -115,16 +115,16 @@
 
 		var islider = new iSlider(opts);
 
-		opts.pointMenu = {
+		var menuOpt = {
 			isVertical: true,
 			left: ' ',
 			right: '0',
 			height: '20%',
 			borderColor: '#777',
-			diameter: '1.5em'
+			diameter: '0.5em'
 		};
 
-		islider.renderIndex(opts);
+		islider.renderIndex(menuOpt);
 	</script>
 </body>
 </html>
