--- a/demo/picture/picture_with_dots.html
+++ b/demo/picture/picture_with_dots.html
@@ -104,13 +104,14 @@
 		};
 		var	islider = new iSlider(opts);
 
-		opts.pointMenu = {
+		var menuOpt = {
 			top: ' ',
 			width: '60%',
+			diameter: '0.5em',
 			borderColor: '#333',
 		};
 
-		islider.renderIndex(opts);
+		islider.renderIndex(menuOpt);
 
 	</script>
 </body>
