make arrow using pure css

--- a/demo/picture/card.html
+++ b/demo/picture/card.html
@@ -81,6 +81,7 @@
 		    	-webkit-transform: rotateZ(-360deg);
 		  	}
 		}
+		/* Arrow */
 		#iSlider-arrow {
 			position: absolute;
 			width: 3em;
