--- a/demo/picture/picture_with_dots.html
+++ b/demo/picture/picture_with_dots.html
@@ -54,40 +54,40 @@
 			{
 				height: 414,
 				width: 300,
-				content: "./imgs/high/1.jpg",
+				content: "./imgs/long/1.jpg",
 			},{
 				height: 414,
 				width: 300,
-				content: "./imgs/high/2.jpg",
+				content: "./imgs/long/2.jpg",
 			},{
 			 	height: 414,
 				width: 300,
-			 	content: "./imgs/high/3.jpg",
+			 	content: "./imgs/long/3.jpg",
 			},{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/4.jpg"
+				content:"./imgs/long/4.jpg"
 			},{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/5.jpg"
+				content:"./imgs/long/5.jpg"
 			},{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/6.jpg"
+				content:"./imgs/long/6.jpg"
 			},{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/7.jpg"
+				content:"./imgs/long/7.jpg"
 			},{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/8.jpg"
+				content:"./imgs/long/8.jpg"
 			},
 			{
 				height: 414,
 				width: 300,
-				content:"./imgs/high/9.jpg"
+				content:"./imgs/long/9.jpg"
 			},
 			];
 		
