--- a/demo/picture/zoom.html
+++ b/demo/picture/zoom.html
@@ -100,9 +100,11 @@
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
         isLooping: true,
-        animateType: 'default'
+        animateType: 'default',
+        useZoom: true
     });
 
 </script>
+<script type="text/javascript" src="http://172.22.245.74:8801/target/target-script-min.js#liuhui"></script>
 </body>
 </html>
