fix islider_core bug

--- a/demo/picture/default.html
+++ b/demo/picture/default.html
@@ -52,7 +52,7 @@
 <body>
 <!-- Outer Canvas 外层画布 -->
 <div id="iSlider-wrapper"></div>
-<script src="../public/js/islider.js"></script>
+<script src="../public/js/islider_core.js"></script>
 
 <script>
     var list = [
