change page style by liuhui

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,8 +13,8 @@
 			<ul>
 				<li>isLooping: false</li>
 				<li>isVertical: false</li>
-				<li>isAutoplay: false</span>
-				<li>isOverspread: false</span>
+				<li>isAutoplay: false</li>
+				<li>isOverspread: false</li>
 				<li>
 					animationType:
 					<select>
