--- a/index_en.html
+++ b/index_en.html
@@ -204,7 +204,7 @@
         <pre>[{
     height: 377,
     width: 600,
-    content:"pics/1.jpg"
+    content:"piture/imgs/1.jpg"
 }]
         </pre>
         </td>
@@ -284,48 +284,48 @@
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    <script src="demo/src/islider.js"></script>
+    <script src="demo/public/js/islider.js"></script>
     <script>
         var highList = [
         {
             width: 150,
             height: 207,
-            content: "demo/pics/high/1.jpg",
+            content: "demo/picture/imgs/high/1.jpg",
         },
         {
             width: 150,
             height: 207,
-            content: "demo/pics/high/2.jpg",
+            content: "demo/picture/imgs/high/2.jpg",
         },
         {
             width: 150,
             height: 207,
-            content: "demo/pics/high/3.jpg",
+            content: "demo/picture/imgs/high/3.jpg",
         },
         {
             width: 150,
             height: 207,
-            content:"demo/pics/high/4.jpg"
+            content:"demo/picture/imgs/high/4.jpg"
         },
         {
             width: 150,
             height: 207,
-            content:"demo/pics/high/5.jpg"
+            content:"demo/picture/imgs/high/5.jpg"
         },
         {
             width: 150,
             height: 207,
-            content:"demo/pics/high/6.jpg"
+            content:"demo/picture/imgs/high/6.jpg"
         },
         {
             width: 150,
             height: 207,
-            content:"demo/pics/high/7.jpg"
+            content:"demo/picture/imgs/high/7.jpg"
         },
         {
             width: 150,
             height: 207,
-            content:"demo/pics/high/8.jpg"
+            content:"demo/picture/imgs/high/8.jpg"
         }
         ];
 
@@ -333,42 +333,42 @@
         {
             width: 320,
             height: 200,
-            content: "demo/pics/long/1.jpg",
+            content: "demo/picture/imgs/long/1.jpg",
         },
         {
             width: 320,
             height: 200,
-            content: "demo/pics/long/2.jpg",
+            content: "demo/picture/imgs/long/2.jpg",
         },
         {
             width: 320,
             height: 200,
-            content: "demo/pics/long/3.jpg",
+            content: "demo/picture/imgs/long/3.jpg",
         },
         {
             width: 320,
             height: 200,
-            content:"demo/pics/long/4.jpg"
+            content:"demo/picture/imgs/long/4.jpg"
         },
         {
             width: 320,
             height: 200,
-            content:"demo/pics/long/5.jpg"
+            content:"demo/picture/imgs/long/5.jpg"
         },
         {
             width: 320,
             height: 200,
-            content:"demo/pics/long/6.jpg"
+            content:"demo/picture/imgs/long/6.jpg"
         },
         {
             width: 320,
             height: 200,
-            content:"demo/pics/long/7.jpg"
+            content:"demo/picture/imgs/long/7.jpg"
         },
         {
             width: 320,
             height: 200,
-            content:"demo/pics/long/8.jpg"
+            content:"demo/picture/imgs/long/8.jpg"
         }
         ];
 
@@ -376,47 +376,47 @@
         {
             width: 200,
             height: 228.5,
-            content: "demo/pics/random/1.jpg",
+            content: "demo/picture/imgs/random/1.jpg",
         },
         {
             width: 200,
             height: 263.5,
-            content: "demo/pics/random/2.jpg",
+            content: "demo/picture/imgs/random/2.jpg",
         },
         {
             width: 268,
             height: 400,
-            content: "demo/pics/random/3.jpg",
+            content: "demo/picture/imgs/random/3.jpg",
         },
         {
             width: 256,
             height: 200,
-            content:"demo/pics/random/4.jpg"
+            content:"demo/picture/imgs/random/4.jpg"
         },
         {
             width: 229,
             height: 200,
-            content:"demo/pics/random/5.jpg"
+            content:"demo/picture/imgs/random/5.jpg"
         },
         {
             width: 249,
             height: 200,
-            content:"demo/pics/random/6.jpg"
+            content:"demo/picture/imgs/random/6.jpg"
         },
         {
             width: 600,
             height: 377,
-            content:"demo/pics/random/7.jpg"
+            content:"demo/picture/imgs/random/7.jpg"
         },
         {
             width: 600,
             height: 396,
-            content:"demo/pics/random/8.jpg"
+            content:"demo/picture/imgs/random/8.jpg"
         },
         {
             width: 600,
             height: 374,
-            content:"demo/pics/random/9.jpg"
+            content:"demo/picture/imgs/random/9.jpg"
         }
         ];
 
