--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             <h4>移动端展示</h4>
             <img width="150px" height="150px" src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png">
         </div>
+        <div style="position:relative;text-align:center">
+            <h4>移动端手势缩放展示</h4>
+            <img width="150px" height="150px" src="demo/picture/imgs/qrcode2.png">
+        </div>
 
         <h4 style="text-align: center">动画效果</h4>
 
