--- a/index_en.html
+++ b/index_en.html
@@ -19,11 +19,24 @@
         <h1 class="header">iSlider</h1>
         <p class="header">Smooth mobile slider for webapps</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/BE-FE/iSlider">View On GitHub</a></li>
+          <ul>
+            <li class="start"><a href="#intro">Get start</a></li>
+            <li class="api"><a href="#api">Api</a></li>
+            <li class="plugin"><a href="#plugin">plugins</a></li>
+            <li class="demo"><a href="#demo">demo</a></li>
+            <li class="down">
+                <div id="head">download</div>
+                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
+                    ZIP</a></div>
+                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download
+                    TAR</a></div>
+            </li>
+            <li><a href="http://be-fe.github.io/iSlider/index_en.html">中文官方网站</a></li>
+            <li><a class="buttons github" href="https://github.com/BE-FE/iSlider">View On GitHub</a></li>
+
+
         </ul>
+        
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/BE-FE">BE-FE</a></p>
 
@@ -46,6 +59,7 @@
     <li>Damping effect, Infinite Looping, Autometic sliding and Vertical/Horizontal Sliding can be configured.</li>
     <li>Support desktop gesture which is convenient for testing.</li>
     <li>Support image preloader to improve user experience.</li>
+	<li>Gesture scale support,solve can't see clearly of large image </li>
 </ul>
 
 <h2 id="demo">
@@ -269,6 +283,11 @@
         <td>Boolean (true | fasle)</td>
         <td>Decide whether to cover the whole browser screen or not</td>
     </tr>
+	<tr>
+		<td>useZoom</td>
+		<td>Boolean(true|false)</td>
+		<td>Decide whether to use zoom function or not</td>
+	</tr>
 </tbody>
 </table>
 
@@ -279,9 +298,7 @@
 
 <p><a href="https://github.com/BE-FE/iSlider/blob/master/LICENSE">MIT</a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+      
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     <script src="demo/public/js/islider.js"></script>
