--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     </header>
     <section>
+
         <h1 id="intro">
             <a id="islider" class="anchor" href="#islider" aria-hidden="true"><span class="octicon octicon-link"></span></a>iSlider
         </h1>
@@ -65,7 +66,18 @@
             <li>支持图片预加载，改善用户体验</li>
             <li>支持手势缩放，解决图片太大无法看清问题</li>
         </ul>
-
+        <h2>iSlider结构说明</h2>
+            <h4>
+                <ul>
+                    <li>islider_core.js:iSlider核心代码库,定义iSlider类，绑定touch事件，图片预加载逻辑，以及图片翻页逻辑</li>
+                    <li>islider_dot.js:支持在图片上添加页码标示，支持点击翻页，以...展示，<a target="_blank"
+                            href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">demo地址</a></li>
+                    <li>islider_button.js：支持在图片上添加页码标示，支持点击翻页. 以左右图标展示<a target="_blank"
+                            href="http://be-fe.github.io/iSlider/dom/slide_with_btn.html">demo地址</a></li>
+                    <li>islider_animate.js：islider滑动效果库，目前支持flip、depth、flow等翻页效果. <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_animate.html">demo地址</a> </li>
+                    <li>islider_zoom.js：针对type为pic类型的滑动元素提供的手势缩放功能，支持android和ios中手势缩放功能，同时支持边缘检测<a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html" target="_blank">demo地址</a></li>
+                </ul>
+            </h4>
         <h2 id="demo">
             <a id="islider展示" class="anchor" href="#islider%E5%B1%95%E7%A4%BA" aria-hidden="true"><span
                     class="octicon octicon-link"></span></a>iSlider展示</h2>
