add star fork and watch

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
         <!-- test-->
         <h1 class="header">iSlider</h1>
 
-        <p class="header">移动webapp滑动最优解决方案</p>
+        <p class="header" style="margin-bottom:10px;">移动webapp滑动最优解决方案</p>
 
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
         <ul>
             <li class="start"><a href="#intro">开始使用</a></li>
             <li class="api"><a href="#api">Api</a></li>
-            <li class="plugin"><a href="#plugin">插件</a></li>
-            <li class="demo"><a href="#demo">实例</a></li>
+
+            <li class="demo"><a href="#demo">实例</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#qcode">更多demo</a></li>
             <li class="down">
                 <div id="head">下载</div>
                 <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
@@ -53,7 +56,7 @@
         <h4>
             <a href="http://be-fe.github.io/iSlider/index_en.html">iSlider English Official Page</a>
             <br>
-            <a href="http://be-fe.github.io/iSlider/demo/">iSlider Example</a>
+            <a href="#qcode">iSlider Example</a>
         </h4>
 
         <p>iSlider是一个表现出众，无任何插件依赖的手机平台javascript滑动组件。它能够处理任何元素，例如图片或者DOM元素。它有如下特性：</p>
@@ -319,7 +322,7 @@
             </tr>
             </tbody>
         </table>
-        <h2>更多demo请扫二维码</h2>
+        <h2 id="qcode">更多demo请扫二维码</h2>
         <ul class="qrcode-1">
             <li>
                 <h4>默认</h4>
