--- a/index_en.html
+++ b/index_en.html
@@ -17,13 +17,16 @@
     <div class="wrapper">
       <header>
         <h1 class="header">iSlider</h1>
-        <p class="header">Smooth mobile slider for webapps</p>
+        <p class="header" style="margin-bottom:10px;">Smooth mobile slider for webapps</p>
 
-          <ul>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="158px" height="20px"></iframe>
+        <ul>
             <li class="start"><a href="#intro">Get start</a></li>
             <li class="api"><a href="#api">Api</a></li>
-            <li class="plugin"><a href="#plugin">plugins</a></li>
-            <li class="demo"><a href="#demo">demo</a></li>
+
+            <li class="demo"><a href="#demo">demo</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#qcode">more</a></li>
             <li class="down">
                 <div id="head">download</div>
                 <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
@@ -49,7 +52,7 @@
 <h4>
     <a href="http://be-fe.github.io/iSlider/index.html">iSlider 中文官网</a>
     <br>
-    <a href="http://be-fe.github.io/iSlider/demo/">iSlider Example</a>
+    <a href="#demo">iSlider Example</a>
 </h4>
 
 <ul>
@@ -66,10 +69,7 @@
 <a id="islider展示" class="anchor" href="#islider%E5%B1%95%E7%A4%BA" aria-hidden="true"><span class="octicon octicon-link"></span></a>iSlider Demo</h2>
 <p>If you use PC，please open a webkit broswer and choose mobile mode to test</p>
 
-<div style="position:relative;text-align:center">
-    <h4>Mobile Demo</h4>
-    <img width="150px" height="150px" src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png">
-</div>
+
 
 <h4 style="text-align: center">Animation Effect</h4>
 <div id="iSlider-effect-wrapper">
@@ -290,7 +290,27 @@
 	</tr>
 </tbody>
 </table>
-
+        <h2 id="qcode">sweep the qr code to see more demo</h2>
+        <ul class="qrcode-1">
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/default.html">default</a></h4>
+                <img src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png" alt="移动端展示"/></li>
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">scale image</a></h4>
+                <img src="images/qrcode2.png" alt="手势缩放展示"/></li>
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">slide with dot </a></h4>
+                <img src="images/dot.png" alt="翻页小点展示"/></li>
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">slide with button</a></h4>
+                <img src="images/button.png" alt="箭头翻页展示"/></li>
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">slide with navigator</a></h4>
+                <img src="images/navigator.png" alt="箭头翻页展示"/></li>
+            <li>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">vertical slide</a></h4>
+                <img src="images/vertical.png" alt="箭头翻页展示"/></li>
+        </ul>
 <h2 id="license">
 <a id="license-mit" class="anchor" href="#license-mit" aria-hidden="true"><span class="octicon octicon-link"></span></a>License (MIT)</h2>
 
