--- a/index.html
+++ b/index.html
@@ -21,22 +21,47 @@
 
         <p class="header" style="margin-bottom:10px;">移动webapp滑动最优解决方案</p>
 
-        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
-        <ul>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small"
+                frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2"
+                frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small"
+                frameborder="0" scrolling="0" width="158px" height="20px"></iframe>
+        <ul id="nav">
             <li class="start"><a href="#intro">开始使用</a></li>
             <li class="api"><a href="#api">Api</a></li>
 
-            <li class="demo"><a href="#demo">实例</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#qcode">更多demo</a></li>
-            <li class="down">
-                <div id="head">下载</div>
-                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
-                    ZIP</a></div>
-                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download
-                    TAR</a></div>
+            <li class="demo sub"><a href="#demo">实例</a>
+                <ul>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/default.html">默认</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">手势缩放</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">小点翻页</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">箭头翻页</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">导航滑动</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">垂直滑动</a>
+                    </li>
+                </ul>
             </li>
-            <li><a href="http://be-fe.github.io/iSlider/index_en.html">英文官方网站</a></li>
+            <li class="down sub"><a href="#download">下载</a>
+                <ul>
+                    <li><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
+                        ZIP</a></li>
+                    <li><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download
+                        TAR</a></li>
+                </ul>
+            </li>
+            <li class="lang"><a href="http://be-fe.github.io/iSlider/index_en.html">English Official</a></li>
             <li><a class="buttons github" href="https://github.com/BE-FE/iSlider">View On GitHub</a></li>
 
 
@@ -325,22 +350,22 @@
         <h2 id="qcode">更多demo请扫二维码</h2>
         <ul class="qrcode-1">
             <li>
-                <h4>默认</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/default.html">默认</a></h4>
                 <img src="https://raw.githubusercontent.com/BE-FE/iSlider/master/qrcode.png" alt="移动端展示"/></li>
             <li>
-                <h4>手势缩放</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">手势缩放</a></h4>
                 <img src="images/qrcode2.png" alt="手势缩放展示"/></li>
             <li>
-                <h4>小点翻页</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">小点翻页</a></h4>
                 <img src="images/dot.png" alt="翻页小点展示"/></li>
             <li>
-                <h4>箭头翻页</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">箭头翻页</a></h4>
                 <img src="images/button.png" alt="箭头翻页展示"/></li>
             <li>
-                <h4>导航滑动</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">导航滑动</a></h4>
                 <img src="images/navigator.png" alt="箭头翻页展示"/></li>
             <li>
-                <h4>垂直滑动</h4>
+                <h4><a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">垂直滑动</a></h4>
                 <img src="images/vertical.png" alt="箭头翻页展示"/></li>
         </ul>
         <h2 id="license">
