--- a/demo/picture/default.html
+++ b/demo/picture/default.html
@@ -101,7 +101,8 @@
         data: list,
         dom: document.getElementById("iSlider-wrapper"),
         isLooping: true,
-        animateType: 'default'
+        animateType: 'default',
+        fixPage: true
     });
 
 </script>
