--- a/index_en.html
+++ b/index_en.html
@@ -22,19 +22,41 @@
         <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=star&count=true&size=small" frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=watch&count=true&size=small&v=2" frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=BE-FE&repo=iSlider&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="158px" height="20px"></iframe>
-        <ul>
+        <ul id="nav">
             <li class="start"><a href="#intro">Get start</a></li>
             <li class="api"><a href="#api">Api</a></li>
 
-            <li class="demo"><a href="#demo">demo</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#qcode">more</a></li>
-            <li class="down">
-                <div id="head">download</div>
-                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
-                    ZIP</a></div>
-                <div class="download"><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download
-                    TAR</a></div>
+            <li class="demo sub"><a href="#demo">实例</a>
+                <ul>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/default.html">默认</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">手势缩放</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">小点翻页</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">箭头翻页</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">导航滑动</a>
+                    </li>
+                    <li>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">垂直滑动</a>
+                    </li>
+                </ul>
             </li>
-            <li><a href="http://be-fe.github.io/iSlider/index_en.html">中文官方网站</a></li>
+            <li class="down sub"><a href="#download">下载</a>
+                <ul>
+                    <li><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
+                        ZIP</a></li>
+                    <li><a class="buttons" href="https://github.com/BE-FE/iSlider/tarball/master">Download
+                        TAR</a></li>
+                </ul>
+            </li>
+            <li class="lang"><a href="http://be-fe.github.io/iSlider/index_en.html">中文官方网站</a></li>
             <li><a class="buttons github" href="https://github.com/BE-FE/iSlider">View On GitHub</a></li>
 
 
