--- a/index_en.html
+++ b/index_en.html
@@ -26,29 +26,29 @@
             <li class="start"><a href="#intro">Get start</a></li>
             <li class="api"><a href="#api">Api</a></li>
 
-            <li class="demo sub"><a href="#demo">实例</a>
+            <li class="demo sub"><a href="#demo">demo</a>
                 <ul>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/picture/default.html">默认</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/default.html">default</a>
                     </li>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">手势缩放</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/zoom.html">gesture scale</a>
                     </li>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">小点翻页</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_dots.html">slider with dot</a>
                     </li>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">箭头翻页</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/picture/picture_with_button.html">slider with arrow</a>
                     </li>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">导航滑动</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/demo_with_navigator.html">slider with nav</a>
                     </li>
                     <li>
-                        <a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">垂直滑动</a>
+                        <a href="http://be-fe.github.io/iSlider/demo/dom/vertical_slide.html">vertical slider</a>
                     </li>
                 </ul>
             </li>
-            <li class="down sub"><a href="#download">下载</a>
+            <li class="down sub"><a href="#download">download</a>
                 <ul>
                     <li><a class="buttons" href="https://github.com/BE-FE/iSlider/zipball/master">Download
                         ZIP</a></li>
@@ -155,7 +155,7 @@
 <p>To make it runnable, all you need to do is to initiate: </p>
 
 <pre><code>&lt;script type="text/javascript"&gt;
-    var iSlider = new iSlider({
+    var islider = new iSlider({
         dom : document.getElementById('iSlider-wrapper'),
         data : data
     });
