--- a/demo/picture/default.html
+++ b/demo/picture/default.html
@@ -56,46 +56,57 @@
 
 <script>
     var list = [
-        {
-            height: 475,
-            width: 400,
-            content: "./imgs/random/1.jpg",
-        }, {
-            height: 527,
-            width: 400,
-            content: "./imgs/random/2.jpg",
-        }, {
-            height: 800,
-            width: 536,
-            content: "./imgs/random/3.jpg",
-        }, {
-            height: 400,
-            width: 512,
-            content: "./imgs/random/4.jpg"
-        }, {
-            height: 400,
-            width: 458,
-            content: "./imgs/random/5.jpg"
-        }, {
-            height: 400,
-            width: 498,
-            content: "./imgs/random/6.jpg"
-        }, {
-            height: 377,
-            width: 600,
-            content: "./imgs/random/7.jpg"
-        }, {
-            height: 396,
-            width: 600,
-            content: "./imgs/random/8.jpg"
-        },
-        {
-            height: 374,
-            width: 600,
-            content: "./imgs/random/9.jpg"
-        },
+        { content: "./imgs/random/1.jpg"}, 
+        { content: "./imgs/random/2.jpg"}, 
+        {content: "./imgs/random/3.jpg"}, 
+        {content: "./imgs/random/4.jpg"}, 
+        {content: "./imgs/random/5.jpg" }, 
+        {content: "./imgs/random/6.jpg"}, 
+        {content: "./imgs/random/7.jpg"}, 
+        {content: "./imgs/random/8.jpg"},
+        {content: "./imgs/random/9.jpg"},
     ];
 
+    // var list = [
+    //     {
+    //         height: 475,
+    //         width: 400,
+    //         content: "./imgs/random/1.jpg",
+    //     }, {
+    //         height: 527,
+    //         width: 400,
+    //         content: "./imgs/random/2.jpg",
+    //     }, {
+    //         height: 800,
+    //         width: 536,
+    //         content: "./imgs/random/3.jpg",
+    //     }, {
+    //         height: 400,
+    //         width: 512,
+    //         content: "./imgs/random/4.jpg"
+    //     }, {
+    //         height: 400,
+    //         width: 458,
+    //         content: "./imgs/random/5.jpg"
+    //     }, {
+    //         height: 400,
+    //         width: 498,
+    //         content: "./imgs/random/6.jpg"
+    //     }, {
+    //         height: 377,
+    //         width: 600,
+    //         content: "./imgs/random/7.jpg"
+    //     }, {
+    //         height: 396,
+    //         width: 600,
+    //         content: "./imgs/random/8.jpg"
+    //     },
+    //     {
+    //         height: 374,
+    //         width: 600,
+    //         content: "./imgs/random/9.jpg"
+    //     },
+    // ];
     var islider = new iSlider({
         type: 'pic',
         data: list,
